finish hamburger navigation / add js for hamburger/navigation/resize

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <ul class="header_link-list">
 
                 <!-- LEISTUNGEN-->
-                    <li class="header_link-list_mega-menu-opener" data-sign="&#43;">
+                    <li class="header_link-list_mega-menu-opener open_mega-menu" data-sign="&#43;">
                         <span class="header_menu-hint">Leistungen</span>
 
                         <!-- MEGA MENU -->
@@ -128,7 +128,7 @@
                     </li><!-- END LEISTUNGEN-->
 
                 <!-- BEAUTY AND BALANCE -->
-                    <li class="header_link-list_sub-menu-opener" data-sign="&#43;">
+                    <li class="header_link-list_sub-menu-opener open_sub-menu" data-sign="&#43;">
                         <a href="#">Beauty & Balance</a>
 
                         <!-- SUB MENU -->
@@ -222,7 +222,8 @@
     </div><!-- end big container-->
 
     <!-- SCRIPTS -->
+    <script src="src/js/resize.js"></script>
     <script src="src/js/dom-elements.js"></script>
-    <script src="src/js/hamburger.js"></script>
+    <script src="src/js/hamburger_navigation.js"></script>
 </body>
 </html>
