working on startpage animations

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dr. Windblade</title>
 
-    <link rel="stylesheet" href="style/common.css">
+    <!-- <link rel="stylesheet" href="style/common.css"> -->
+    <link rel="stylesheet" href="./node_modules/animate.css/animate.css">
     <link rel="stylesheet" href="style/home.css">
 </head>
 <body>
@@ -242,7 +243,7 @@
         <section class="startpage_leistungen clippy-off">
             <header>
                 <img src="./graphics/icons_n_co/caduceus.png" alt="caduceus">
-                <h2>Meine Leistungen</h2>
+                <h2 class="animate__animated">Meine Leistungen</h2>
             </header>
 
 
@@ -411,7 +412,7 @@
 
               <!-- COVID -->
               <div class="footer_open-times_covid">
-                <h3>Covid-19 Ag + PCR Test </h3>
+                <h3>Covid-19 Ag + PCR Test :</h3>
 
                 <div class="weekday-container">
                    <p>Mo - Fr</p>
@@ -427,6 +428,8 @@
         <!-- CONTACT-->
             <section class="footer_contact">
                 <h2 class="hidden">Kontakt</h2>
+
+                <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d10958.664299076168!2d14.27471763787281!3d46.63335876611274!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4770738648f236dd%3A0xbb75cc4856b431b!2sKreuzbergl!5e0!3m2!1sde!2sat!4v1676971160780!5m2!1sde!2sat"  allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade" class="google-maps"></iframe >
 
                 <!-- ADRESS-->
                 <adress>
@@ -460,12 +463,22 @@
 
         <!-- IMPORTANT PAGES -->
             <section class="footer_important-pages">
+                <h2>Wichtige Seiten</h2>
+
                 <ul>
                     <li>
                         <a href="#">Kassenleistungen</a>
+                    </li>
+                    <li>
                         <a href="#">Wahlarztleistungen</a>
+                    </li>
+                    <li>
                         <a href="#">Ästhetische Medizin</a>
+                    </li>
+                    <li>
                         <a href="#">Beauty & Balance</a>
+                    </li>
+                    <li>
                         <a href="#">Physiotherapie</a>
                     </li>
                 </ul>
@@ -477,8 +490,10 @@
     </div><!-- end big container-->
 
     <!-- SCRIPTS -->
-    <script src="src/js/resize.js"></script>
+    <!-- <script src="src/js/resize.js"></script> -->
     <script src="src/js/dom-elements.js"></script>
     <script src="src/js/hamburger_navigation.js"></script>
+    <script src="src/js/header.js"></script>
+    <script src="src/js/in-viewport.js"></script>
 </body>
 </html>
