change from aesthetic to alternative / add services

--- a/index.html
+++ b/index.html
@@ -64,6 +64,9 @@
 
                                 <ul class="header_mega-menu_list">
                                     <li>
+                                        <a href="#">Ruhe EKG</a>
+                                    </li>
+                                    <li>
                                         <a href="#">24h EKG</a>
                                     </li>
                                     <li>
@@ -73,7 +76,13 @@
                                         <a href="#">Eventrecorder</a>
                                     </li>
                                     <li>
-                                        <a href="#">Abdomensonographie</a>
+                                        <a href="#">Lungenfunktion</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Ergometrie</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Schilddrüsensonographie</a>
                                     </li>
                                     <li>
                                         <a href="#">OP Fähigkeit</a>
@@ -87,31 +96,37 @@
                                 </ul>
                             </li>
 
-                            <!-- ÄSTHETISCHE MEDIZIN-->
+                            <!-- ALTERNATIVE MEDIZIN -->
                             <li class="header_mega-menu_list-point">
-                                <a href="#" class="header_mega-menu_sub-heading">Ästhetische Medizin</a>
+                                <a href="#" class="header_mega-menu_sub-heading">Alternative Medizin</a>
 
                                 <ul class="header_mega-menu_list">
                                     <li>
-                                        <a href="#">Pimp Your Glow</a>
+                                        <a href="#">TCM</a>
 
                                         <ul class="header_mega-menu_sub-list">
                                             <li>
-                                                <a href="#">Fruchtsäure Peeling</a>
+                                                <a href="#">Akupunktur</a>
                                             </li>
                                             <li>
-                                                <a href="#">Hydrobooster</a>
+                                                <a href="#">Tuina</a>
                                             </li>
                                             <li>
-                                                <a href="#">Botox gegen Falten</a>
+                                                <a href="#">Moxibustion</a>
                                             </li>
                                             <li>
-                                                <a href="#">Botox gegen Müdigkeit</a>
+                                                <a href="#">Ernährungsberatung</a>
+                                            </li>
+                                            <li>
+                                                <a href="#">Qigong</a>
                                             </li>
                                         </ul>
                                     </li>
                                     <li>
-                                        <a href="#">Injectables</a>
+                                        <a href="#">Schröpfen</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Tibetische Massage</a>
                                     </li>
                                 </ul>
                             </li>
@@ -128,7 +143,7 @@
                                         <a href="#">Covid 19 - PCR Test</a>
                                     </li>
                                     <li>
-                                        <a href="#">Covid 19 - Impfung</a>
+                                        <a href="#">Long Covid Begleitung</a>
                                     </li>
                                 </ul>
                             </li>
@@ -136,49 +151,57 @@
                         </ul><!-- END MEGA MENU-->
                     </li><!-- END LEISTUNGEN-->
 
-                <!-- BEAUTY AND BALANCE -->
+                <!-- TCM -->
                     <li class="header_link-list_sub-menu-opener open_sub-menu" data-sign="&#43;">
-                        <a href="#">Beauty & Balance</a>
+                        <a href="#">Alternative Wege</a>
 
                         <!-- SUB MENU -->
                         <ul class="header_sub-menu">
 
-                            <!-- PIMP YOUR GLOW -->
+                            <!-- TCM -->
                             <li class="header_sub-menu_sub-sub-opener" data-sign="&#43;">
-                                <a href="#">Pimp Your Glow</a>
+                                <a href="#">TCM</a>
 
                                 <ul class="header_sub-menu_sub-menu">
                                     <li>
-                                        <a href="#">Fruchtsäure Peeling</a>
+                                        <a href="#">Akupunktur</a>
                                     </li>
                                     <li>
-                                        <a href="#">Hydrobooster</a>
+                                        <a href="#">Tuina</a>
                                     </li>
                                     <li>
-                                        <a href="#">Botox gegen Falten</a>
+                                        <a href="#">Moxibustion</a>
                                     </li>
                                     <li>
-                                        <a href="#">Botox gegen Müdigkeit</a>
+                                        <a href="#">Ernährungsberatung</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Qigong</a>
                                     </li>
                                 </ul>
                             </li>
 
-                            <!-- INJECTABLES -->
+                            <!-- SCHRÖPFEN -->
                             <li>
-                                <a href="#">Injectables</a>
+                                <a href="#">Schröpfen</a>
                             </li>
 
-                             <!-- HERZ FIT -->
+                             <!-- TIBETISCHE MASSAGE -->
                              <li>
-                                <a href="#">Herz Fit Gruppe</a>
+                                <a href="#">Tibetische Massage</a>
                             </li>
 
-                             <!-- HERZ FIT -->
+                             <!-- Qi Gong Gruppe -->
                              <li>
-                                <a href="#">Fit In Town Gruppe</a>
+                                <a href="#">Qi Gong Gruppe</a>
+                            </li>
+
+                              <!-- Meditation Gruppe -->
+                              <li>
+                                <a href="#">Meditationsgruppe</a>
                             </li>
                         </ul><!-- END SUB MENU -->
-                    </li><!-- END BEAUTY & BALANCE -->
+                    </li><!-- END ALTERNATIGE WEGE -->
 
                 <!-- AKTUELLES -->
                     <li>
@@ -249,7 +272,7 @@
 
             <div class="startpage_leistungen_card-container">
         <!-- CARD KASSENLEISTUNGEN -->
-            <div class="startpage_leistungen_card">
+            <div class="startpage_leistungen_card animate__animated" id="card-kassen">
                 <div class="startpage_leistungen_card_header">
                     <img src="graphics/pics/stethoscope.jpg" alt="stethoscope">
                     <h3>Kassenleistungen</h3>
@@ -275,7 +298,7 @@
 
 
         <!-- CARD WAHLARZTLEISTUNGEN -->
-            <div class="startpage_leistungen_card">
+            <div class="startpage_leistungen_card animate__animated" id="card-wahlarzt">
                 <div class="startpage_leistungen_card_header">
                     <img src="graphics/pics/analysis.jpg" alt="stethoscope">
                     <h3>Wahlarztleistungen</h3>
@@ -300,36 +323,36 @@
             </div>
 
 
-        <!-- CARD ÄSTHETISCHE MEDIZIN (big card) -->
-            <div class="startpage_leistungen_card big-card">
+        <!-- CARD ALTERNATIVE MEDIZIN(big card) -->
+            <div class="startpage_leistungen_card big-card animate__animated" id="card-aesthetic">
                 <img src="./graphics/pics/aesthetic_medicine.jpg" alt="woman" class="card-pic">
 
                 <div class="big-card_card-container">
                     <div class="startpage_leistungen_card_header">
-                        <h3>Ästhetische Medizin</h3>
+                        <h3>Alternative Medizin</h3>
                     </div>
         
                     <ul class="startpage_leistungen_card_list">
                         <li>
-                            <span>Fruchtsäure Peeling</span>
+                            <span>Akupunktur</span>
                         </li>
                         <li>
-                            <span>Botox Behandlung</span>
+                            <span>Schröpfen</span>
                         </li>
                         <li>
-                            <span>Microneedling</span>
+                            <span>Tibetische Massage</span>
                         </li>
                         <li>
                             <span>uvm.</span>
                         </li>
                     </ul>
         
-                    <button class="startpage_leistungen_card_button" id="button_aesthetic">zur Ästhetischen Medizin</button>
+                    <button class="startpage_leistungen_card_button" id="button_aesthetic">zur Alternativen Medizin</button>
                 </div>
             </div>
 
         <!-- CARD WEITERE LEISTUNGEN (big card) -->
-            <div class="startpage_leistungen_card big-card">
+            <div class="startpage_leistungen_card big-card animate__animated" id="card-more">
                 <img src="./graphics/pics/team.jpg" alt="woman">
 
                 <div class="big-card_card-container">
@@ -344,7 +367,7 @@
                         </li>
                         <li>
                             <!-- <span>24h Blutdruck</span> -->
-                            <button class="startpage_leistungen_card_button" id="button_herz-fit">Herz Fit Gruppe</button>
+                            <button class="startpage_leistungen_card_button" id="button_herz-fit">Qi Gong Gruppe</button>
                         </li>
                         <li>
                             <!-- <span>Eventrecorder</span> -->
