--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html lang="de">
+<!DOCTYPE html>
+<html lang="de" class="default">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -325,7 +326,7 @@
 
         <!-- CARD ALTERNATIVE MEDIZIN(big card) -->
             <div class="startpage_leistungen_card big-card animate__animated" id="card-aesthetic">
-                <img src="./graphics/pics/aesthetic_medicine.jpg" alt="woman" class="card-pic">
+                <img src="./graphics/pics/tea.jpg" alt="woman" class="card-pic">
 
                 <div class="big-card_card-container">
                     <div class="startpage_leistungen_card_header">
@@ -353,7 +354,7 @@
 
         <!-- CARD WEITERE LEISTUNGEN (big card) -->
             <div class="startpage_leistungen_card big-card animate__animated" id="card-more">
-                <img src="./graphics/pics/team.jpg" alt="woman">
+                <img src="./graphics/pics/meditation.jpg" alt="woman">
 
                 <div class="big-card_card-container">
                     <div class="startpage_leistungen_card_header">
